# sortMail

./: .env.example  .gitignore  LICENSE  Makefile  README.md  architecture.md  contracts.md  database_schema.md  docker-compose.yml  implementation_plan.md  repo_structure.md  sprint_plan.md  ui_ux_spec.md
backend/: FOLLOWUP_DEPLOYMENT.md  alembic.ini  check_att.py  check_tags.py  create_dummy_mail.py  drafts_schema.json  error_trace.txt  output.txt  pyproject.toml  requirements.txt  test_out.txt  testenum.py  tmp_check_array.py  tmp_check_array2.py  tmp_check_draft.py  tmp_check_draft_2.py  tmp_check_enum.py  tmp_check_pg_any.py  tmp_check_thread.py  tmp_check_tonetype.py  tmp_draft_query.py  tmp_draft_query2.py  tmp_err.txt  tmp_insert_draft.py  tmp_intel_query.py  tmp_read_schema.py  tmp_schema.py  tmp_test_llama_draft.py  verify_list_drafts.py  verify_reminders.py  verify_tags_api.py  verify_tags_logic.py
backend/alembic/: env.py
backend/api/: dependencies.py
backend/app/: config.py  dependencies.py  main.py
backend/contracts/: ingestion.py  intelligence.py  mocks.py  user.py  workflow.py
backend/core/: app_metrics.py  encryption.py  redis.py  redis_metrics.py
backend/models/: __init__.py  admin.py  ai.py  analytics.py  api_keys.py  attachment.py  billing.py  calendar_suggestion.py  connected_account.py  contact.py  credits.py  document.py  draft.py  email.py  experiments.py  follow_up.py  health.py  integration.py  jobs.py  notification.py  recycle_bin.py  reminder.py  retention.py  rules.py  search.py  tag.py  task.py  template.py  thread.py  user.py  (+3 more)
(+258 files in other folders)
